fix scrollbar. fix samis pic

--- a/components/views/landing/Landing.module.scss
+++ b/components/views/landing/Landing.module.scss
@@ -28,7 +28,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             height: calc(100vh - var(--nav-height));
-            width: 100vw;
+            width: 100%;
             position: absolute;
             z-index: -1;
             top: var(--nav-height);
@@ -147,22 +147,22 @@
             grid-gap: 5rem;
 
             .reason {
-                text-align: justify;
                 display: grid;
                 grid-template-rows: 3rem 3rem 1fr;
                 grid-gap: 1rem;
                 align-items: flex-start;
-                justify-items: center;
 
                 svg {
                     font-size: 3rem;
                     color: var(--skyblue400);
+                    margin: auto;
                 }
 
                 .primary {
                     font-size: 1.75rem;
                     color: var(--off-black);
                     font-weight: 400;
+                    text-align: center;
                 }
 
                 .secondary {
@@ -170,6 +170,10 @@
                     color: var(--slate600);
                     letter-spacing: -1px;
                 }
+            }
+
+            @media screen and (max-width: 850px) {
+                grid-template-columns: 1fr;
             }
         }
     }
@@ -187,7 +191,6 @@
         .teamBlock {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            // grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
 
             .devCard {
                 padding: 1rem;
