--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,7 +22,7 @@ a {
 
 main {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: grid;
     grid-template-rows: var(--nav-height) 1fr var(--footer-height);
 }
